--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,8 @@
 ---
 - name: Create AWS instances
-  hosts: local
+  hosts: all
   connection: local
+  gather_facts: False
 
   vars_files:
     - group_vars/env.yml
@@ -24,11 +25,12 @@
           - proto: tcp
             from_port: 443
             to_port: 443
-        aws_access_key: "{{ aws_access_key }}"
-        aws_secret_key: "{{ aws_secret_key }}"
+            cidr_ip: 0.0.0.0/0
+#        aws_access_key: "{{ aws_access_key }}"
+#        aws_secret_key: "{{ aws_secret_key }}"
 
     - name: Create EC2 instance for build
-      ec2:
+      amazon.aws.ec2:
         key_name: "{{ keypair }}"
         instance_type: "{{ instance_type }}"
         image: "{{ image }}"
@@ -37,8 +39,8 @@
         instance_tags:
           name: build
         count: "{{ count }}"
-        aws_access_key: "{{ aws_access_key }}"
-        aws_secret_key: "{{ aws_secret_key }}"
+#        aws_access_key: "{{ aws_access_key }}"
+#        aws_secret_key: "{{ aws_secret_key }}"
       register: ec2
 
   
